--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <link rel="stylesheet" href="/assets/sytle/estilo.css">
     <title>OptimusTech</title>
 </head>
-<body class="bg-white fonteTexto">
+<body class="bg-white fonteTexto mx-5">
     <header>
         <nav class="navbar navbar-expand-lg bg-white ms-5 me-5 d-flex align-items-center">
             <div class="container-fluid">
                 <img src="assets/img/logo.png" alt="Logo da OptimusTech">
-                <a class="navbar-brand ms-" href="#">OptimusTech</a>
+                <a class="navbar-brand ms-2" href="#">OptimusTech</a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
