--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body class="bg-white fonteTexto mx-5">
     <header>
         <nav class="navbar navbar-expand-lg bg-white ms-5 me-5 d-flex align-items-center">
-            <div class="container-fluid">
+            <div class="container-fluid mt-2">
                 <img src="assets/img/logo.png" alt="Logo da OptimusTech">
                 <a class="navbar-brand ms-2" href="#">OptimusTech</a>
 
@@ -47,7 +47,13 @@
         </div>
         </nav>
     </header>
-    
+    <main>
+        <section class="banner1 text-center">
+            <h6 class="cor-vinho fw-bold">Sobre nós</h6>
+            <h1 class="tamFonte48 py-4">Por que somos diferentes?</h1>
+            <h5 class="txt-banner">Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as empresas de todo o mundo a se concentrarem naquilo que é realmente importante para elas.</h5>
+        </section>
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
 </body>
