--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <link rel="stylesheet" href="/assets/sytle/estilo.css">
     <title>OptimusTech</title>
 </head>
-<body class="bg-white fonteTexto mx-5">
+<body class="bg-white fonteTexto">
     <header>
-        <nav class="navbar navbar-expand-lg bg-white ms-5 me-5 d-flex align-items-center">
+        <nav class="navbar navbar-expand-lg bg-white  d-flex align-items-center">
             <div class="container-fluid mt-2">
                 <img src="assets/img/logo.png" alt="Logo da OptimusTech">
                 <a class="navbar-brand ms-2" href="#">OptimusTech</a>
@@ -52,6 +52,32 @@
             <h6 class="cor-vinho fw-bold">Sobre nós</h6>
             <h1 class="tamFonte48 py-4">Por que somos diferentes?</h1>
             <h5 class="txt-banner">Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as empresas de todo o mundo a se concentrarem naquilo que é realmente importante para elas.</h5>
+        </section>
+
+        <section class="banner2 d-flex justify-content-evenly ">
+            <div class="estatisticas">
+                <h1 class="tit_banner2 fw-bold">400+</h1>
+                <h5 class="txt-banner2">Projetos concluídos</h>
+                <h6 class="cinza1">Nós ajudamos a construir mais de 400 projetos incríveis.</h6>
+            </div>
+
+            <div class="estatisticas">
+                <h1 class="tit_banner2 fw-bold">100+</h1>
+                <h5 class="txt-banner2">Colaboradores</h>
+                <h6 class="cinza1">Temos mais de 100 colaboradores no nosso time que se preocupam com nossos clientes.</h6>
+            </div>
+
+            <div class="estatisticas">
+                <h1 class="tit_banner2 fw-bold">20k</h1>
+                <h5 class="txt-banner2">Downloads</h>
+                <h6 class="cinza1">Nossos projetos que estão disponíveis em lojas já foram baixados mais de 20.000 vezes.</h6>
+            </div>
+
+            <div class="estatisticas">
+                <h1 class="tit_banner2 fw-bold">500+</h1>
+                <h5 class="txt-banner2">Reviews 5 estrelas</h>
+                <h6 class="cinza1">Estamos orgulhosos de contar com mais de 500 reviews 5 estrelas em nossos produtos.</h6>
+            </div>
         </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
