--- a/index.html
+++ b/index.html
@@ -57,27 +57,32 @@
         <section class="banner2 d-flex justify-content-evenly ">
             <div class="estatisticas">
                 <h1 class="tit_banner2 fw-bold">400+</h1>
-                <h5 class="txt-banner2">Projetos concluídos</h>
-                <h6 class="cinza1">Nós ajudamos a construir mais de 400 projetos incríveis.</h6>
+                <h5 class="txt-banner2">Projetos concluídos</h5>
+                <p class="cinza1 paragrafo-banner2">Nós ajudamos a construir mais de 400 projetos incríveis.</p>
             </div>
 
             <div class="estatisticas">
                 <h1 class="tit_banner2 fw-bold">100+</h1>
-                <h5 class="txt-banner2">Colaboradores</h>
-                <h6 class="cinza1">Temos mais de 100 colaboradores no nosso time que se preocupam com nossos clientes.</h6>
+                <h5 class="txt-banner2">Colaboradores</h5>
+                <p class="cinza1 paragrafo-banner2">Temos mais de 100 colaboradores no nosso time que se preocupam com nossos clientes.</p>
             </div>
 
             <div class="estatisticas">
                 <h1 class="tit_banner2 fw-bold">20k</h1>
-                <h5 class="txt-banner2">Downloads</h>
-                <h6 class="cinza1">Nossos projetos que estão disponíveis em lojas já foram baixados mais de 20.000 vezes.</h6>
+                <h5 class="txt-banner2">Downloads</h5>
+                <p class="cinza1 paragrafo-banner2">Nossos projetos que estão disponíveis em lojas já foram baixados mais de 20.000 vezes.</p>
             </div>
 
             <div class="estatisticas">
                 <h1 class="tit_banner2 fw-bold">500+</h1>
-                <h5 class="txt-banner2">Reviews 5 estrelas</h>
-                <h6 class="cinza1">Estamos orgulhosos de contar com mais de 500 reviews 5 estrelas em nossos produtos.</h6>
+                <h5 class="txt-banner2">Reviews 5 estrelas</h5>
+                <p class="cinza1 paragrafo-banner2">Estamos orgulhosos de contar com mais de 500 reviews 5 estrelas em nossos produtos.</p>
             </div>
+        </section>
+
+        <section class="banner3">
+            <p class="cor-vinho fw-bold">Vagas abertas</p>
+            <h1 class="tamFonte48 py-4">Estamos procurando talentos</h1>
         </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
