--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <section class="banner1 text-center">
             <h6 class="cor-vinho fw-bold">Sobre nós</h6>
             <h1 class="tamFonte48 py-4">Por que somos diferentes?</h1>
-            <h5 class="txt-banner">Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as empresas de todo o mundo a se concentrarem naquilo que é realmente importante para elas.</h5>
+            <p class="txt-banner">Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as empresas de todo o mundo a se concentrarem naquilo que é realmente importante para elas.</p>
         </section>
 
         <section class="banner2 d-flex justify-content-evenly ">
@@ -80,9 +80,11 @@
             </div>
         </section>
 
-        <section class="banner3">
-            <p class="cor-vinho fw-bold">Vagas abertas</p>
-            <h1 class="tamFonte48 py-4">Estamos procurando talentos</h1>
+        <section class="banner3 text-center">
+            <h6 class="cor-vinho borda-banner3">Vagas abertas</h6>
+            <h2 class="tamFonte48 py-4">Estamos procurando talentos</h2>
+            <p class="cinza1 paragrafo-banner2">Nós ajudamos a construir mais de 400 projetos incríveis.</p>
+            <img src="assets/img/banner.png" alt="Grupo de pessoas sentados a mesa, com computadores, numa reunião.">
         </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
