--- a/index.html
+++ b/index.html
@@ -49,32 +49,32 @@
     </header>
     <main>
         <section class="banner1 text-center">
-            <h6 class="cor-vinho fw-bold">Sobre nós</h6>
+            <h6 class="cor-vinho fw-bolder">Sobre nós</h6>
             <h1 class="tamFonte48 py-4">Por que somos diferentes?</h1>
             <p class="txt-banner">Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as empresas de todo o mundo a se concentrarem naquilo que é realmente importante para elas.</p>
         </section>
 
-        <section class="banner2 d-flex justify-content-evenly ">
+        <section class="banner2 d-flex justify-content-evenly pb-5">
             <div class="estatisticas">
-                <h1 class="tit_banner2 fw-bold">400+</h1>
+                <h1 class="tit_banner2 fw-bolder">400+</h1>
                 <h5 class="txt-banner2">Projetos concluídos</h5>
                 <p class="cinza1 paragrafo-banner2">Nós ajudamos a construir mais de 400 projetos incríveis.</p>
             </div>
 
             <div class="estatisticas">
-                <h1 class="tit_banner2 fw-bold">100+</h1>
+                <h1 class="tit_banner2 fw-bolder">100+</h1>
                 <h5 class="txt-banner2">Colaboradores</h5>
                 <p class="cinza1 paragrafo-banner2">Temos mais de 100 colaboradores no nosso time que se preocupam com nossos clientes.</p>
             </div>
 
             <div class="estatisticas">
-                <h1 class="tit_banner2 fw-bold">20k</h1>
+                <h1 class="tit_banner2 fw-bolder">20k</h1>
                 <h5 class="txt-banner2">Downloads</h5>
                 <p class="cinza1 paragrafo-banner2">Nossos projetos que estão disponíveis em lojas já foram baixados mais de 20.000 vezes.</p>
             </div>
 
             <div class="estatisticas">
-                <h1 class="tit_banner2 fw-bold">500+</h1>
+                <h1 class="tit_banner2 fw-bolder">500+</h1>
                 <h5 class="txt-banner2">Reviews 5 estrelas</h5>
                 <p class="cinza1 paragrafo-banner2">Estamos orgulhosos de contar com mais de 500 reviews 5 estrelas em nossos produtos.</p>
             </div>
@@ -82,9 +82,11 @@
 
         <section class="banner3 text-center">
             <h6 class="cor-vinho borda-banner3">Vagas abertas</h6>
-            <h2 class="tamFonte48 py-4">Estamos procurando talentos</h2>
-            <p class="cinza1 paragrafo-banner2">Nós ajudamos a construir mais de 400 projetos incríveis.</p>
-            <img src="assets/img/banner.png" alt="Grupo de pessoas sentados a mesa, com computadores, numa reunião.">
+            <h2 class="tamFonte36 py-2 fw-bolder">Estamos procurando talentos</h2>
+            <p class="cinza1 fs-5">Somos uma equipe 100% remota com pessoas do Brasil inteiro.</p>
+            <figure class="figure-img img-fluid mt-5">
+                <img src="assets/img/banner.png" alt="Grupo de pessoas sentados a mesa, com computadores, numa reunião.">
+            </figure>
         </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
