--- a/index.html
+++ b/index.html
@@ -88,6 +88,47 @@
                 <img src="assets/img/banner.png" alt="Grupo de pessoas sentados a mesa, com computadores, numa reunião.">
             </figure>
         </section>
+
+        <section class="banner4">
+            <h5 class="tit-vagas">Design</h5>
+            <div class="cx-vagas border rounded-4">
+                <h6 class="tit-cargo">Product Designer</h6>
+                <div class="d-flex gap-4">
+                    <p class="cinza1 m-0">Full-time</p>
+                    <p class="cinza1 m-0">Faixa salarial: R$7.000</p>
+                </div>
+            </div>
+            <div class="cx-vagas border rounded-4 mt-4">
+                <h6 class="tit-cargo">UX Designer</h6>
+                <div class="d-flex gap-4">
+                    <p class="cinza1 m-0">Full-time</p>
+                    <p class="cinza1 m-0">Faixa salarial: R$6.000</p>
+                </div>
+            </div>
+
+            <h5 class="tit-vagas mt-5">Desenvolvimento de Software</h5>
+            <div class="cx-vagas border rounded-4 mt-4">
+                <h6 class="tit-cargo">Desenvolvedor(a) iOS</h6>
+                <div class="d-flex gap-4">
+                    <p class="cinza1 m-0">Full-time</p>
+                    <p class="cinza1 m-0">Faixa salarial: R$8.000</p>
+                </div>
+            </div>
+            <div class="cx-vagas border rounded-4 mt-4">
+                <h6 class="tit-cargo">Desenvolvedor(a) Front-end</h6>
+                <div class="d-flex gap-4">
+                    <p class="cinza1 m-0">Full-time</p>
+                    <p class="cinza1 m-0">Faixa salarial: R$7.000</p>
+                </div>
+            </div>
+            <div class="cx-vagas border rounded-4 mt-4">
+                <h6 class="tit-cargo">Desenvolvedor(a) Back-end</h6>
+                <div class="d-flex gap-4">
+                    <p class="cinza1 m-0">Full-time</p>
+                    <p class="cinza1 m-0">Faixa salarial: R$8.000</p>
+                </div>
+            </div>
+        </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
