--- a/index.html
+++ b/index.html
@@ -129,8 +129,17 @@
                 </div>
             </div>
         </section>
+        <article class="opinioes text-center p-5">
+            <h6 class="tit-opinioes fw-bolder">Veja o que nossos colaboradores falam sobre nós</h6>
+            <p class=" txt-opinioes fw-medium">OptimusTech se importa com a saúde dos seus colaboradores e sempre procura nos dar todo tipo de auxílio possível.</p>
+            <figure class="m-4">
+                <img src="assets/img/Avatar.png" alt="Imagem de uma mulher ruiva sentada a meds">
+            </figure>
+            <h6 class="fw-medium">Júlia Castro</h6>
+            <p class="cinza1 fw-light">Desenvolvedora Web</p>
+        </article>    
     </main>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
