--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>OptimusTech</title>
 </head>
 <body class="bg-white fonteTexto">
-    <header>
+    <header class="margem">
         <nav class="navbar navbar-expand-lg bg-white  d-flex align-items-center">
             <div class="container-fluid mt-2">
                 <img src="assets/img/logo.png" alt="Logo da OptimusTech">
@@ -48,13 +48,13 @@
         </nav>
     </header>
     <main>
-        <section class="banner1 text-center">
+        <section class="banner1 text-center margem">
             <h6 class="cor-vinho fw-bolder">Sobre nós</h6>
             <h1 class="tamFonte48 py-4">Por que somos diferentes?</h1>
             <p class="txt-banner">Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as empresas de todo o mundo a se concentrarem naquilo que é realmente importante para elas.</p>
         </section>
 
-        <section class="banner2 d-flex justify-content-evenly pb-5">
+        <section class="banner2 d-flex justify-content-evenly pb-5 margem">
             <div class="estatisticas">
                 <h1 class="tit_banner2 fw-bolder">400+</h1>
                 <h5 class="txt-banner2">Projetos concluídos</h5>
@@ -80,7 +80,7 @@
             </div>
         </section>
 
-        <section class="banner3 text-center">
+        <section class="banner3 text-center margem">
             <h6 class="cor-vinho borda-banner3">Vagas abertas</h6>
             <h2 class="tamFonte36 py-2 fw-bolder">Estamos procurando talentos</h2>
             <p class="cinza1 fs-5">Somos uma equipe 100% remota com pessoas do Brasil inteiro.</p>
@@ -89,7 +89,7 @@
             </figure>
         </section>
 
-        <section class="banner4">
+        <section class="banner4 margem">
             <h5 class="tit-vagas">Design</h5>
             <div class="cx-vagas border rounded-4">
                 <h6 class="tit-cargo">Product Designer</h6>
@@ -129,7 +129,7 @@
                 </div>
             </div>
         </section>
-        <article class="opinioes text-center p-5">
+        <article class="opinioes text-center p-5 margem">
             <h6 class="tit-opinioes fw-bolder">Veja o que nossos colaboradores falam sobre nós</h6>
             <p class=" txt-opinioes fw-medium">OptimusTech se importa com a saúde dos seus colaboradores e sempre procura nos dar todo tipo de auxílio possível.</p>
             <figure class="m-4">
@@ -137,7 +137,17 @@
             </figure>
             <h6 class="fw-medium">Júlia Castro</h6>
             <p class="cinza1 fw-light">Desenvolvedora Web</p>
-        </article>    
+        </article>
+
+        <footer class="text-center rodape ">
+            <h2 class="tamFonte36 py-2 fw-bolder">Acompanhe as nossas oportunidades</h2>
+            <p class="cinza1 fs-5 my-4">Seja o primeiro a saber quando novas vagas serão abertas!</p>
+            <form class="d-flex justify-content-center" role="search">
+                <input class="form-control me-2 largura-email" type="email" placeholder="Seu e-mail" aria-label="email">
+                <button class="btn btn-outline-success cadastrar" type="submit">Cadastrar</button>
+            </form>
+            <p class="fw-light fs-6 cinza1 my-4">© 2022 OptimusTech. Todos os direitos reservados.</p>
+        </footer>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
