--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <h6 class="cor-vinho borda-banner3">Vagas abertas</h6>
             <h2 class="tamFonte36 py-2 fw-bolder">Estamos procurando talentos</h2>
             <p class="cinza1 fs-5">Somos uma equipe 100% remota com pessoas do Brasil inteiro.</p>
-            <figure class="figure-img img-fluid mt-5">
+            <figure class="img-reuniao" class="figure-img img-fluid mt-5">
                 <img src="assets/img/banner.png" alt="Grupo de pessoas sentados a mesa, com computadores, numa reunião.">
             </figure>
         </section>
@@ -131,9 +131,9 @@
         </section>
         <article class="opinioes text-center p-5 margem">
             <h6 class="tit-opinioes fw-bolder">Veja o que nossos colaboradores falam sobre nós</h6>
-            <p class=" txt-opinioes fw-medium">OptimusTech se importa com a saúde dos seus colaboradores e sempre procura nos dar todo tipo de auxílio possível.</p>
+            <p class="txt-opinioes fw-medium">OptimusTech se importa com a saúde dos seus colaboradores e sempre procura nos dar todo tipo de auxílio possível.</p>
             <figure class="m-4">
-                <img src="assets/img/Avatar.png" alt="Imagem de uma mulher ruiva sentada a meds">
+                <img class=""src="assets/img/Avatar.png" alt="Imagem de uma mulher ruiva sentada a meds">
             </figure>
             <h6 class="fw-medium">Júlia Castro</h6>
             <p class="cinza1 fw-light">Desenvolvedora Web</p>
