--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <p class="txt-banner">Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as empresas de todo o mundo a se concentrarem naquilo que é realmente importante para elas.</p>
         </section>
 
-        <section class="banner2 d-flex justify-content-evenly pb-5 margem">
+        <section class="banner2 d-flex justify-content-evenly pb-5 margem row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
             <div class="estatisticas">
                 <h1 class="tit_banner2 fw-bolder">400+</h1>
                 <h5 class="txt-banner2">Projetos concluídos</h5>
@@ -84,8 +84,8 @@
             <h6 class="cor-vinho borda-banner3">Vagas abertas</h6>
             <h2 class="tamFonte36 py-2 fw-bolder">Estamos procurando talentos</h2>
             <p class="cinza1 fs-5">Somos uma equipe 100% remota com pessoas do Brasil inteiro.</p>
-            <figure class="img-reuniao" class="figure-img img-fluid mt-5">
-                <img src="assets/img/banner.png" alt="Grupo de pessoas sentados a mesa, com computadores, numa reunião.">
+            <figure class="img-reuniao mt-5">
+                <img class="figure-img img-fluid" src="assets/img/banner.png" alt="Grupo de pessoas sentados a mesa, com computadores, numa reunião.">
             </figure>
         </section>
 
@@ -133,7 +133,7 @@
             <h6 class="tit-opinioes fw-bolder">Veja o que nossos colaboradores falam sobre nós</h6>
             <p class="txt-opinioes fw-medium">OptimusTech se importa com a saúde dos seus colaboradores e sempre procura nos dar todo tipo de auxílio possível.</p>
             <figure class="m-4">
-                <img class=""src="assets/img/Avatar.png" alt="Imagem de uma mulher ruiva sentada a meds">
+                <img class="img-fluid"src="assets/img/Avatar.png" alt="Imagem de uma mulher ruiva sentada a meds">
             </figure>
             <h6 class="fw-medium">Júlia Castro</h6>
             <p class="cinza1 fw-light">Desenvolvedora Web</p>
