--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body class="bg-white fonteTexto">
     <header class="margem">
-        <nav class="navbar navbar-expand-lg bg-white  d-flex align-items-center">
+        <nav class="navbar navbar-expand-lg bg-white   d-flex align-items-center">
             <div class="container-fluid mt-2">
 
                 <img src="assets/img/logo.png" alt="Logo da OptimusTech">
@@ -38,8 +38,12 @@
                         <li class="nav-item px-2">
                             <a class="cinza1 nav-link" href="#">Sobre nós</a>
                         </li>
+                        <div class="botoes_telaMenor">
+                            <a class="entrar cinza1 px-4" href="#">Entrar</a>
+                            <button class="btn btn-outline-success cadastrar" type="submit">Cadastrar</button>
+                        </div>
                     </ul>
-                    <div class="botoes">
+                   <div class="botoes">
                         <a class="entrar cinza1 px-4" href="#">Entrar</a>
                         <button class="btn btn-outline-success cadastrar" type="submit">Cadastrar</button>
                     </div>
@@ -51,7 +55,7 @@
         <section class="banner1 text-center margem">
             <h6 class="cor-vinho fw-bolder">Sobre nós</h6>
             <h1 class="tamFonte48 py-4">Por que somos diferentes?</h1>
-            <p class="txt-banner">Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as empresas de todo o mundo a se concentrarem naquilo que é realmente importante para elas.</p>
+            <p class="txt-banner margem ">Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as empresas de todo o mundo a se concentrarem naquilo que é realmente importante para elas.</p>
         </section>
 
         <section class="banner2 d-flex justify-content-evenly pb-5 margem row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
