--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>OptimusTech</title>
 </head>
 <body class="bg-white fonteTexto">
-    <header class="margem">
+    <header class="cabecalho margem">
         <nav class="navbar navbar-expand-lg bg-white   d-flex align-items-center">
             <div class="container-fluid mt-2">
 
@@ -55,7 +55,7 @@
         <section class="banner1 text-center margem">
             <h6 class="cor-vinho fw-bolder">Sobre nós</h6>
             <h1 class="tamFonte48 py-4">Por que somos diferentes?</h1>
-            <p class="txt-banner margem ">Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as empresas de todo o mundo a se concentrarem naquilo que é realmente importante para elas.</p>
+            <p class="txt-banner margem">Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as empresas de todo o mundo a se concentrarem naquilo que é realmente importante para elas.</p>
         </section>
 
         <section class="banner2 d-flex justify-content-evenly pb-5 margem row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
