--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@
         </section>
         <article class="opinioes text-center p-5 margem">
             <h6 class="tit-opinioes fw-bolder">Veja o que nossos colaboradores falam sobre nós</h6>
-            <p class="txt-opinioes fw-medium">OptimusTech se importa com a saúde dos seus colaboradores e sempre procura nos dar todo tipo de auxílio possível.</p>
+            <p class="txt-opinioes fw-medium d-xl-block d-lg-block d-md-block d-none">OptimusTech se importa com a saúde dos seus colaboradores e sempre procura nos dar todo tipo de auxílio possível.</p>
+            <p class="txt-opinioes2 fw-medium">OptimusTech se importa com a saúde dos seus colaboradores</p>
             <figure class="m-4">
                 <img class="img-fluid"src="assets/img/Avatar.png" alt="Imagem de uma mulher ruiva sentada a meds">
             </figure>
