--- a/index.html
+++ b/index.html
@@ -144,14 +144,14 @@
             <p class="cinza1 fw-light">Desenvolvedora Web</p>
         </article>
 
-        <footer class="text-center rodape ">
+        <footer class="text-center rodape">
             <h2 class="tamFonte36 py-2 fw-bolder">Acompanhe as nossas oportunidades</h2>
             <p class="cinza1 fs-5 my-4">Seja o primeiro a saber quando novas vagas serão abertas!</p>
-            <form class="d-flex justify-content-center" role="search">
+            <form class="rodape-form d-flex justify-content-center" role="search">
                 <input class="form-control me-2 largura-email" type="email" placeholder="Seu e-mail" aria-label="email">
                 <button class="btn btn-outline-success cadastrar" type="submit">Cadastrar</button>
             </form>
-            <p class="fw-light fs-6 cinza1 my-4">© 2022 OptimusTech. Todos os direitos reservados.</p>
+            <p class="fw-light fs-6 cinza1 my-3">© 2022 OptimusTech. Todos os direitos reservados.</p>
         </footer>
     </main>
 
